fixed letter spacing on right sidebar

--- a/src/assets/sass/_map.scss
+++ b/src/assets/sass/_map.scss
@@ -86,7 +86,7 @@
     }
   }
   .clear-selection {
-    background: url(../img/icons/sprite-top-map.png) -77px 5px no-repeat rgba(159, 173, 173, .8);
+    background: url(../img/icons/sprite-top-map.png) -73px 5px no-repeat rgba(159, 173, 173, .8);
     transform: rotate(-90deg);
     &:hover {
       background-color: rgba(0, 207, 255, .8);
