--- a/src/assets/sass/_popup.scss
+++ b/src/assets/sass/_popup.scss
@@ -301,7 +301,7 @@
       }
     }
     .content-popup {
-      height: 7rem;
+      height: 6.5rem;
       padding: 5px 1rem;
       padding-top: 0;
       overflow: hidden;
