--- a/src/assets/sass/_search_popups.scss
+++ b/src/assets/sass/_search_popups.scss
@@ -497,7 +497,7 @@
     .event-result .links-nav .tools > li {
       > a {
         font-size: 1.15rem;
-        letter-spacing: 1px;
+        //letter-spacing: 1px;
         padding-left: 20px;
       }
       &:last-child {
